2017-01-06 Werner S Freund <wsfreund@gmail.com>
	* util.py: Moved traverse and related objects to LoopingBounds.py,
	also moved EnumStringification to Configure.py as it is commonly used
	for configuration.
	* Configure.py: Created a based class which can be used together with 
	EnumStringification to generate a Singleton (through the Holder class) that
	can be retrieved and mantain a unique flow over the different modules.
	* __init__.py: Added version to file.
	* util.py: Added method which dynamically returns the git description
	of the module state.

2017-01-04 Werner S Freund <wsfreund@gmail.com>
	* Improved argparse interaction with the utilities that RingerCore provides 
	through the module ParsingUtils.py. The special cases are the
	EnumStringification and the Logger classes, which now can automatically
	detect those special cases.
	* Also added a ClusterManager tool, which can be used to specify which
	cluster manager is to be used.
	* parsers/LocalCluster.py: new module with a parser for local clusters managers,
	such as LSF and Torque/PBS.