@@ -1,21 +1,22 @@
 __all__ = ['LoggerNamespace', 'loggerParser']
 
 from RingerCore.parsers.ParsingUtils import ArgumentParser, argparse
+from RingerCore.Logger import ( LoggingLevel, Logger, )
+from RingerCore.Configure import masterLevel
 
 ###############################################################################
 # Logger related objects
 ###############################################################################
 class _RetrieveOutputLevelAction(argparse.Action):
   def __call__(self, parser, namespace, value, option_string=None):
+    masterLevel.set( value )
     self.level = value
     namespace.level = value
     setattr(namespace, self.dest, value)
 
-from RingerCore.Logger import LoggingLevel, Logger
 loggerParser = ArgumentParser(add_help = False)
 logOutput = loggerParser.add_argument_group('Logging arguments', '')
 logOutput.add_argument('--output-level', action=_RetrieveOutputLevelAction,
-    default = LoggingLevel.tostring( LoggingLevel.INFO ),  # FIXME If default is not level, this will be ignored by namespace
     type=LoggingLevel, required = False, dest='_level',
     metavar = 'LEVEL', help = "The output level for the main logger." )
 # TODO Add a destination file for logging messages
@@ -46,7 +47,8 @@ if not hasattr(argparse.Namespace, 'output_level'):
       try:
         return self._level
       except AttributeError:
-        raise AttributeError("Namespace does not have any level property. Make sure to add the loggerParser as a parent in the RingerCore.parsers submodule.")
+        return masterLevel()
+
   def _setOutputLevel(self, value):
     try:
       self.level = value
@@ -55,5 +57,4 @@ if not hasattr(argparse.Namespace, 'output_level'):
         self._level = value
       except AttributeError:
         raise AttributeError("Namespace does not have any level property. Make sure to add the loggerParser as a parent in the RingerCore.parsers submodule.")
-  import types
   argparse.Namespace.output_level = property( _getOutputLevel , _setOutputLevel)
